Got the images with their captions to be correctly aligned. Quote containr is good, just needs to be styled and anything left is to build out the modal.

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,8 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  margin: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 li {
@@ -22,6 +23,7 @@ a {
 
 .header {
   background-color: gray;
+  text-align: justify;
 }
 
 .header-container {
@@ -91,7 +93,8 @@ a {
   background-color: blanchedalmond;
   display: flex;
   justify-content: center;
-  gap: 15px;
+  padding: 20px;
+  gap: 30px;
 }
 
 img {
@@ -101,18 +104,29 @@ img {
   border-radius: 10px;
 }
 
+.caption {
+  width: 150px;
+}
+
+.item {
+  max-width: 200px;
+}
+
 .title {
   font-size: 36px;
   font-weight: 900;
   display: flex;
   justify-content: center;
-  margin: 10px;
 }
 
 /* quote container */
 
 .quote-container {
   background-color: chocolate;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 100px;
 }
 
 footer {
